{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 102,
  "lineage": "6771966d-1cd9-091c-60dd-acc40ef5a878",
  "resources": [
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "app_first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:subnet/subnet-0067b2774c354e9d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0067b2774c354e9d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544994275596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-app-1",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "hardwarestore-alb-logs-7d64966f",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:544994275596:loadbalancer/app/hardwarestore-alb/80ccd779633abf85",
            "arn_suffix": "app/hardwarestore-alb/80ccd779633abf85",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hardwarestore-alb-1860377822.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:544994275596:loadbalancer/app/hardwarestore-alb/80ccd779633abf85",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hardwarestore-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06f7534abc14ddd6a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ba766ed5c3d845e"
              },
              {
                "subnet_id": "subnet-0ba5b88356dab2c0c"
              }
            ],
            "subnets": [
              "subnet-06ba766ed5c3d845e",
              "subnet-0ba5b88356dab2c0c"
            ],
            "tags": {
              "Name": "hardwarestore-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-alb",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_secretsmanager_secret.app",
            "data.aws_caller_identity.current",
            "module.database.aws_db_instance.main",
            "module.database.aws_db_subnet_group.main",
            "module.database.aws_kms_alias.rds",
            "module.database.aws_kms_key.rds",
            "module.database.data.aws_caller_identity.current",
            "module.iam.aws_iam_instance_profile.app",
            "module.iam.aws_iam_role.app",
            "module.iam.aws_iam_role_policy.cloudwatch_logs",
            "module.iam.aws_iam_role_policy.secrets_read",
            "module.iam.aws_iam_role_policy_attachment.ssm",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.monitoring.aws_cloudwatch_log_group.app",
            "module.monitoring.aws_cloudwatch_metric_alarm.rds_cpu_high",
            "module.monitoring.aws_sns_topic.alerts",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.db",
            "module.storage.aws_cloudtrail.main",
            "module.storage.aws_s3_bucket.alb_logs",
            "module.storage.aws_s3_bucket.cloudtrail",
            "module.storage.aws_s3_bucket_lifecycle_configuration.alb_logs",
            "module.storage.aws_s3_bucket_policy.alb_logs",
            "module.storage.aws_s3_bucket_policy.cloudtrail",
            "module.storage.aws_s3_bucket_public_access_block.alb_logs",
            "module.storage.aws_s3_bucket_public_access_block.cloudtrail",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.alb_logs",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.cloudtrail",
            "module.storage.aws_s3_bucket_versioning.alb_logs",
            "module.storage.aws_s3_bucket_versioning.cloudtrail",
            "module.storage.data.aws_elb_service_account.main",
            "module.storage.random_id.bucket_suffix",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:544994275596:listener/app/hardwarestore-alb/80ccd779633abf85/671e0a5c34dc020a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:544994275596:targetgroup/hardwarestore-tg/dc0f9f0c9254c06d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:544994275596:listener/app/hardwarestore-alb/80ccd779633abf85/671e0a5c34dc020a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:544994275596:loadbalancer/app/hardwarestore-alb/80ccd779633abf85",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "hardwarestore-listener-http"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-listener-http",
              "Project": "hardwarestore"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_secretsmanager_secret.app",
            "data.aws_caller_identity.current",
            "module.compute.aws_lb.main",
            "module.compute.aws_lb_target_group.app",
            "module.compute.data.aws_subnet.app_first",
            "module.database.aws_db_instance.main",
            "module.database.aws_db_subnet_group.main",
            "module.database.aws_kms_alias.rds",
            "module.database.aws_kms_key.rds",
            "module.database.data.aws_caller_identity.current",
            "module.iam.aws_iam_instance_profile.app",
            "module.iam.aws_iam_role.app",
            "module.iam.aws_iam_role_policy.cloudwatch_logs",
            "module.iam.aws_iam_role_policy.secrets_read",
            "module.iam.aws_iam_role_policy_attachment.ssm",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.monitoring.aws_cloudwatch_log_group.app",
            "module.monitoring.aws_cloudwatch_metric_alarm.rds_cpu_high",
            "module.monitoring.aws_sns_topic.alerts",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.db",
            "module.storage.aws_cloudtrail.main",
            "module.storage.aws_s3_bucket.alb_logs",
            "module.storage.aws_s3_bucket.cloudtrail",
            "module.storage.aws_s3_bucket_lifecycle_configuration.alb_logs",
            "module.storage.aws_s3_bucket_policy.alb_logs",
            "module.storage.aws_s3_bucket_policy.cloudtrail",
            "module.storage.aws_s3_bucket_public_access_block.alb_logs",
            "module.storage.aws_s3_bucket_public_access_block.cloudtrail",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.alb_logs",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.cloudtrail",
            "module.storage.aws_s3_bucket_versioning.alb_logs",
            "module.storage.aws_s3_bucket_versioning.cloudtrail",
            "module.storage.data.aws_elb_service_account.main",
            "module.storage.random_id.bucket_suffix",
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:544994275596:targetgroup/hardwarestore-tg/dc0f9f0c9254c06d",
            "arn_suffix": "targetgroup/hardwarestore-tg/dc0f9f0c9254c06d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:544994275596:targetgroup/hardwarestore-tg/dc0f9f0c9254c06d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:544994275596:loadbalancer/app/hardwarestore-alb/80ccd779633abf85"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hardwarestore-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "hardwarestore-tg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-tg",
              "Project": "hardwarestore"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_secretsmanager_secret.app",
            "data.aws_caller_identity.current",
            "module.compute.data.aws_subnet.app_first",
            "module.database.aws_db_instance.main",
            "module.database.aws_db_subnet_group.main",
            "module.database.aws_kms_alias.rds",
            "module.database.aws_kms_key.rds",
            "module.database.data.aws_caller_identity.current",
            "module.iam.aws_iam_instance_profile.app",
            "module.iam.aws_iam_role.app",
            "module.iam.aws_iam_role_policy.cloudwatch_logs",
            "module.iam.aws_iam_role_policy.secrets_read",
            "module.iam.aws_iam_role_policy_attachment.ssm",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.monitoring.aws_cloudwatch_log_group.app",
            "module.monitoring.aws_cloudwatch_metric_alarm.rds_cpu_high",
            "module.monitoring.aws_sns_topic.alerts",
            "module.security.aws_security_group.db",
            "module.storage.aws_cloudtrail.main",
            "module.storage.aws_s3_bucket.alb_logs",
            "module.storage.aws_s3_bucket.cloudtrail",
            "module.storage.aws_s3_bucket_lifecycle_configuration.alb_logs",
            "module.storage.aws_s3_bucket_policy.alb_logs",
            "module.storage.aws_s3_bucket_policy.cloudtrail",
            "module.storage.aws_s3_bucket_public_access_block.alb_logs",
            "module.storage.aws_s3_bucket_public_access_block.cloudtrail",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.alb_logs",
            "module.storage.aws_s3_bucket_server_side_encryption_configuration.cloudtrail",
            "module.storage.aws_s3_bucket_versioning.alb_logs",
            "module.storage.aws_s3_bucket_versioning.cloudtrail",
            "module.storage.data.aws_elb_service_account.main",
            "module.storage.random_id.bucket_suffix",
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:network-acl/acl-0111a257f8a4ec1a7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 5432
              }
            ],
            "id": "acl-0111a257f8a4ec1a7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 5000,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 5000
              }
            ],
            "owner_id": "544994275596",
            "subnet_ids": [
              "subnet-0067b2774c354e9d8",
              "subnet-06a72acaaf0acf654"
            ],
            "tags": {
              "Name": "hardwarestore-nacl-app"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-nacl-app",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:network-acl/acl-0678e1713124799ec",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0678e1713124799ec",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.3.0/24",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 5432
              },
              {
                "action": "allow",
                "cidr_block": "10.0.4.0/24",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 5432
              }
            ],
            "owner_id": "544994275596",
            "subnet_ids": [
              "subnet-0568c832624de7640",
              "subnet-0dc7dd571d56d311f"
            ],
            "tags": {
              "Name": "hardwarestore-nacl-db"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-nacl-db",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:network-acl/acl-0359111f5783c6a49",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 105,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 5000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 5000
              }
            ],
            "id": "acl-0359111f5783c6a49",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "544994275596",
            "subnet_ids": [
              "subnet-06ba766ed5c3d845e",
              "subnet-0ba5b88356dab2c0c"
            ],
            "tags": {
              "Name": "hardwarestore-nacl-public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-nacl-public",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:security-group/sg-06f7534abc14ddd6a",
            "description": "ALB: allow HTTP/HTTPS inbound from internet; forward to app tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Forward traffic to app tier on port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "id": "sg-06f7534abc14ddd6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet (redirected to HTTPS by listener rule)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hardwarestore-sg-alb",
            "name_prefix": "",
            "owner_id": "544994275596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hardwarestore-sg-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-sg-alb",
              "Project": "hardwarestore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:security-group/sg-009d0d52702f45a10",
            "description": "App tier: allow port 5000 from ALB only; DB and AWS API egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS outbound for AWS API calls (Secrets Manager, CloudWatch, SSM)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-009d0d52702f45a10",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Flask app port - from ALB only (least-privilege ingress)",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f7534abc14ddd6a"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "hardwarestore-sg-app",
            "name_prefix": "",
            "owner_id": "544994275596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hardwarestore-sg-app"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-sg-app",
              "Project": "hardwarestore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:security-group/sg-0ea1759c2d858970d",
            "description": "DB tier: allow PostgreSQL (5432) from app tier only; no egress",
            "egress": [],
            "id": "sg-0ea1759c2d858970d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from app tier only (Risk 1 + Risk 2 mitigation)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009d0d52702f45a10"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "hardwarestore-sg-db",
            "name_prefix": "",
            "owner_id": "544994275596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hardwarestore-sg-db"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-sg-db",
              "Project": "hardwarestore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_db_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL to DB tier only",
            "from_port": 5432,
            "id": "sgrule-1897340509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-009d0d52702f45a10",
            "security_group_rule_id": "sgr-082caeec3e25271c3",
            "self": false,
            "source_security_group_id": "sg-0ea1759c2d858970d",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_from_app_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from app tier only (Risk 1 + Risk 2 mitigation)",
            "from_port": 5432,
            "id": "sgrule-1877913706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ea1759c2d858970d",
            "security_group_rule_id": "sgr-0967e260ed5c12826",
            "self": false,
            "source_security_group_id": "sg-009d0d52702f45a10",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00569f747644d0a72",
            "arn": "arn:aws:ec2:us-east-1:544994275596:elastic-ip/eipalloc-00569f747644d0a72",
            "association_id": "eipassoc-09b18361acf2fa490",
            "domain": "vpc",
            "id": "eipalloc-00569f747644d0a72",
            "network_border_group": "us-east-1",
            "network_interface": "eni-068c33712d67312f8",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_ip": "10.0.1.40",
            "public_dns": "ec2-98-95-232-139.compute-1.amazonaws.com",
            "public_ip": "98.95.232.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hardwarestore-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-nat-eip",
              "Project": "hardwarestore"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:internet-gateway/igw-0a087e0aef0659e88",
            "id": "igw-0a087e0aef0659e88",
            "owner_id": "544994275596",
            "tags": {
              "Name": "hardwarestore-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-igw",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00569f747644d0a72",
            "association_id": "eipassoc-09b18361acf2fa490",
            "connectivity_type": "public",
            "id": "nat-0f65ae6a9847a5631",
            "network_interface_id": "eni-068c33712d67312f8",
            "private_ip": "10.0.1.40",
            "public_ip": "98.95.232.139",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06ba766ed5c3d845e",
            "tags": {
              "Name": "hardwarestore-nat"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-nat",
              "Project": "hardwarestore"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:route-table/rtb-0c532c4f164780015",
            "id": "rtb-0c532c4f164780015",
            "owner_id": "544994275596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f65ae6a9847a5631",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hardwarestore-rt-app"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-rt-app",
              "Project": "hardwarestore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:route-table/rtb-0293e9cd71a64820f",
            "id": "rtb-0293e9cd71a64820f",
            "owner_id": "544994275596",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hardwarestore-rt-db"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-rt-db",
              "Project": "hardwarestore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:route-table/rtb-09c9011916dcbb585",
            "id": "rtb-09c9011916dcbb585",
            "owner_id": "544994275596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a087e0aef0659e88",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hardwarestore-rt-public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-rt-public",
              "Project": "hardwarestore"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08afd2b09527c4517",
            "route_table_id": "rtb-0c532c4f164780015",
            "subnet_id": "subnet-0067b2774c354e9d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.app",
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0309a659e8b410479",
            "route_table_id": "rtb-0c532c4f164780015",
            "subnet_id": "subnet-06a72acaaf0acf654"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.app",
            "module.vpc.aws_subnet.app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041a2db32a985549a",
            "route_table_id": "rtb-0293e9cd71a64820f",
            "subnet_id": "subnet-0568c832624de7640"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.db",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079ef4b7c651e8286",
            "route_table_id": "rtb-0293e9cd71a64820f",
            "subnet_id": "subnet-0dc7dd571d56d311f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.db",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c55bce8152d6cc5",
            "route_table_id": "rtb-09c9011916dcbb585",
            "subnet_id": "subnet-06ba766ed5c3d845e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc52451b2e74e855",
            "route_table_id": "rtb-09c9011916dcbb585",
            "subnet_id": "subnet-0ba5b88356dab2c0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:subnet/subnet-0067b2774c354e9d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0067b2774c354e9d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544994275596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hardwarestore-app-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-app-1",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:subnet/subnet-06a72acaaf0acf654",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a72acaaf0acf654",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544994275596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hardwarestore-app-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-app-2",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:subnet/subnet-0568c832624de7640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0568c832624de7640",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544994275596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hardwarestore-db-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-db-1",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:subnet/subnet-0dc7dd571d56d311f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc7dd571d56d311f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544994275596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hardwarestore-db-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-db-2",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:subnet/subnet-06ba766ed5c3d845e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ba766ed5c3d845e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544994275596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hardwarestore-public-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-public-1",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:subnet/subnet-0ba5b88356dab2c0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba5b88356dab2c0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544994275596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hardwarestore-public-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-public-2",
              "Project": "hardwarestore"
            },
            "vpc_id": "vpc-0c7f0747caff49e38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:544994275596:vpc/vpc-0c7f0747caff49e38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d9523bf3b2de73f0",
            "default_route_table_id": "rtb-0d5dfab04423e0be4",
            "default_security_group_id": "sg-00306e21b6d228eb4",
            "dhcp_options_id": "dopt-0f4fa769066970951",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7f0747caff49e38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5dfab04423e0be4",
            "owner_id": "544994275596",
            "tags": {
              "Name": "hardwarestore-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "hardwarestore-vpc",
              "Project": "hardwarestore"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}